kubernetes/dev/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot-dev
  namespace: dev
  labels:
    app: discord-bot-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot-dev
  template:
    metadata:
      name: discord-bot-dev
      labels:
        app: discord-bot-dev
    spec:
      containers:
        - name: discord-bot-dev
          image: ghcr.io/zgamelogic/discord-bot:development
          imagePullPolicy: Always
          volumeMounts:
            - name: apns-volume
              mountPath: "/apns"
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: 8085
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: apns-volume
          secret:
            secretName: apns-secret
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
