kubernetes/dev/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discord-dev-ingress
  namespace: dev
spec:
  rules:
    - host: "discord-dev.zgamelogic.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discord-bot-dev
                port:
                  number: 8080
  tls:
    - hosts:
        - "discord-dev.zgamelogic.com"
      secretName: ingress-tls
